force-app/main/default/objects/Web_User__c/Web_User__c.object-meta.xml
<CustomObject>
    <description>Storing the web user coming from the external system</description>
    <label>Web User</label>
    <nameField>
        <label>Web User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web User Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>