force-app/main/default/objects/Web_User__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company to which the user belongs</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>