force-app/main/default/objects/Web_User__c/fields/IsPremium__c.field-meta.xml
<CustomField>
    <fullName>IsPremium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPremium</label>
    <type>Checkbox</type>
</CustomField>