force-app/main/default/objects/Web_User__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username from the external system</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>