force-app/main/default/objects/Web_User__c/fields/Web_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Site_Id__c</fullName>
    <description>External Id between Salesforce and the external sytem</description>
    <label>Web Site Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>